--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,6 @@
 
 <template id="tmp-screen">
   <section class="screen hidden">
-    <h2 class="title"></h2>
+    <h2 class="title">Some title</h2>
   </section>
 </template>
