--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
 <title>Single page app</title>
 
 <header>
-  <h1>My simple one page app.</h1>
+  <h1>My simple one page app</h1>
   <nav></nav>
 </header>
 
