--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<script src="index.js" type="module" defer></script>
-<link rel="stylesheet" href="style.css">
+<script src="/index.js" type="module" defer></script>
+<link rel="stylesheet" href="/style.css">
 <title>Single page app</title>
 
 <header>
