some css, bugfixes

--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <script src="/index.js" type="module" defer></script>
 <link rel="stylesheet" href="/style.css">
-<title>Single page app</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Simple SPA | Loading...</title>
 
 <header>
-  <h1>My simple one page app</h1>
+  <h1>My &OpenCurlyQuote;simple&CloseCurlyQuote; one page app</h1>
   <nav>
   </nav>
 </header>
@@ -14,7 +15,7 @@
 </main>
 
 <footer>
-  <p>Boop.</p>
+  <p>Not logged in.</p>
 </footer>
 
 <template id="tmp-screen">
