--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <script src="/index.js" type="module"></script>
 <link rel="stylesheet" href="/style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="manifest" href="manifest.json">
+<link rel="manifest" href="/manifest.json">
 <title>Simple SPA | Loading...</title>
 
 <header>
