--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,6 @@
 <script>
   if ('serviceWorker' in navigator) {
     //navigator.serviceWorker.register('sw.js', { scope: '/simple-one-page/' });
-    navigator.serviceWorker.register('sw.js');
+    navigator.serviceWorker.register('/sw.js', { scope: '/' });
   }
 </script>
